<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="36dp"
    android:background="#424242"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commentError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

    <EditText
        android:id="@+id/review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/input_review"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6" />
    </com.google.android.material.textfield.TextInputLayout>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="1.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirm_review"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_gradient"
            android:text="@string/confirm_review"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cancel_review"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_gradient"
            android:text="@string/cancel_review"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>