<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00796B"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#424242" />

        </com.google.android.material.appbar.AppBarLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFFFF" />

        <!-- Numbers category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_numbers">

            <TextView
                android:id="@+id/numbers"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_numbers" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFFFF" />

        <!-- Family category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_family">

            <TextView
                android:id="@+id/family"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_family" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFFFF" />

        <!-- Colors category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_colors">

            <TextView
                android:id="@+id/colours"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_colors" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFFFF" />

        <!-- Phrases category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_phrases">

            <TextView
                android:id="@+id/phrases"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_phrases" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFFFF" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTintMode="src_over"
        app:srcCompat="@drawable/plus_sign" />
</RelativeLayout>
